# lexrag

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/: launch.json
data/mapping/: ipc_bns_mapping.csv
frontend/: .env.local.example  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  logo.tsx  page.tsx
src/lexrag/: config.py  models.py
src/lexrag/api/: main.py
src/lexrag/api/static/: index.html
src/lexrag/ingestion/: chunker.py  embed.py  ingest.py  suggest_mapping.py
src/lexrag/llm/: groq_client.py
src/lexrag/parsing/: __init__.py  bns_parser.py  common.py  ipc_parser.py
src/lexrag/retrieval/: mapping.py  retriever.py
tests/: test_chunker.py  test_parsing.py
