[project]
name = "lexrag"
version = "0.1.0"
description = "RAG assistant over the Indian Penal Code (IPC) and Bharatiya Nyaya Sanhita (BNS)"
requires-python = ">=3.11"
dependencies = [
  "pymupdf>=1.28,<2",
  "qdrant-client>=1.18,<2",
  "fastembed>=0.8,<1",
  "fastapi>=0.139,<1",
  "uvicorn[standard]>=0.51,<1",
  "sse-starlette>=3.4,<4",
  "groq>=1.5,<2",
  "python-dotenv>=1.2,<2",
  "rapidfuzz>=3.14,<4",
  "pydantic>=2.13,<3",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lexrag"]
